fix spacing under blog

--- a/wp-content/themes/kstrap/sass/theme.scss
+++ b/wp-content/themes/kstrap/sass/theme.scss
@@ -1298,6 +1298,11 @@ html {
 }
 
 .section.news {
+
+  .card {
+    margin-bottom: 1.5rem;
+  }
+
   .article-image {
     .card-image {
       overflow: hidden;
